--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio Website</title>
+    <title>Portfolio_Website</title>
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
@@ -67,7 +67,7 @@
             </div>
             <div class="grid_item">
               <div class="card">
-                <img src="images/project2.png" alt="Project 1" />
+                <img src="images/project2.png" alt="Project 2" />
                 <div class="card_content">
                   <h3>Job Application</h3>
                 </div>
@@ -75,7 +75,7 @@
             </div>
             <div class="grid_item">
               <div class="card">
-                <img src="images/project3.png" alt="Project 1" />
+                <img src="images/project3.png" alt="Project 3" />
                 <div class="card_content">
                   <h3>Parallax Website</h3>
                 </div>
